try fixing bio photo not round on mobile issue

--- a/src/style.css
+++ b/src/style.css
@@ -300,7 +300,7 @@ a:focus {
   margin-right: var(--spacing-4);
   margin-bottom: var(--spacing-0);
   min-width: 50px;
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 
 .blog-post header h1 {
